syntax = "proto3";

package pb;



//The UserApi service definition.
service UserApi {
 rpc GetByUsername (GetByUsernameRequest) returns (GetByUsernameReply);
}

message GetByUsernameRequest {
    string Username = 1;
}

message GetByUsernameData {
    string Username = 1;
   }
   
   message GetByUsernameReply {
    GetByUsernameData Data  = 1;
    string      Error = 2;
   }

